fix: Improve service navigation styles on mobile devices Card: https://app.clickup.com/t/86c09cjmp

--- a/src/styles/globals/navigation/_service-nav.css
+++ b/src/styles/globals/navigation/_service-nav.css
@@ -1,15 +1,17 @@
 .service-nav {
     --service-nav-opacity: 0;
     --service-nav-position: fixed;
+    --service-nav-height: fit-content;
     --service-nav-bottom: 0;
     --service-nav-left: var(--spacing-normal);
-    --service-nav-padding: 0;
+    --service-nav-padding: var(--spacing-s) 0;
     --service-nav-border-top: 1px solid var(--color-white-o-75);
     --service-nav-width: calc(100% - var(--spacing-l));
     --service-nav-display: flex;
+    --service-nav-flex-flow: row wrap;
     --service-nav-align-items: center;
     --service-nav-justify-content: flex-start;
-    --service-nav-gap: var(--spacing-normal);
+    --service-nav-gap: var(--spacing-s) var(--spacing-l);
     --service-nav-transform: translateY(-100vh);
     --service-nav-pointer-events: none;
     --service-nav-transition:
@@ -20,6 +22,7 @@
     --service-nav-link-font-size: var(--font-size-normal);
     --service-nav-link-text-decoration: none;
     --service-nav-link-color: var(--color-bg);
+    --service-nav-link-min-height: var(--a11y-min-target-size);
 
     position: var(--service-nav-position);
     height: var(--service-nav-height);
@@ -30,6 +33,7 @@
     background: var(--service-nav-background-color);
     width: var(--service-nav-width);
     display: var(--service-nav-display);
+    flex-flow: var(--service-nav-flex-flow);
     align-items: var(--service-nav-align-items);
     justify-content: var(--service-nav-justify-content);
     gap: var(--service-nav-gap);
@@ -58,6 +62,7 @@
     font-size: var(--service-nav-link-font-size);
     text-decoration: var(--service-nav-link-text-decoration);
     color: var(--service-nav-link-color);
+    min-height: var(--service-nav-link-min-height);
 }
 
 .topbar[open-nav] .service-nav {
